Table users {
  id bigserial [pk]
  name varchar(30) [not null]
  email varchar(255) [not null, unique]
  prefecture varchar(30) //居住都道府県
  
  password_hash varchar(255) [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes { 
    (email)
  }
}

Table reservations {
  id bigserial [pk]
  user_id bigint [not null, ref : > users.id]
  room_id bigint [not null, ref : > rooms.id]

  guest_count int [not null]
  check_in date [not null]
  check_out date [not null]
  total_price int [not null]

  status varchar(10) [not null, default: 'CONFIRMED']
  cancelled_at timestamptz

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (user_id)
    (room_id,check_in,check_out)
    (status)
  }
}

Table hotels {
  id bigserial [pk]

  name varchar(200) [not null]
  prefecture varchar(20) [not null]
  description text
  cover_image_url varchar(500)

  address_line varchar(200)
  rating int //5つ星ホテルまで

  created_at timestamptz [not null, default:`now()`]
  updated_at timestamptz [not null, default: `now()`]

  Indexes {
    (prefecture)
    (name)
  }
}

Table rooms {
  id bigserial [pk]
  
  hotel_id bigint [not null, ref: > hotels.id]
  name varchar(100) [not null]
  capacity int [not null]
  price_per_night int [not null]

  created_at timestamptz [not null, default:`now()`]
  updated_at timestamptz [not null, default:`now()`]

  Indexes {
    (hotel_id)
    (price_per_night)
  }
}